methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SlugSnail:13: warning: enclosing method hunt has result type Unit: return value discarded
      return true
      ^SlugSnail:30: error: not found: value x
      if (getGroundColor()==x){
                            ^